--- a/src/containers/Mine/Mine.scss
+++ b/src/containers/Mine/Mine.scss
@@ -1,4 +1,37 @@
 .mine{
   width: 100%;
-  margin: 100px auto;
+  height: 200px;
+  //background-color: #93dbe9;
+  border: 1px solid #93dbe9;
+  border-radius:5px;
+  margin: 30px auto 50px;
+  padding: 20px 50px;
+  &__info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px ;
+    &__type{
+      width: 100%;
+      height: 20px;
+      &__bold{
+        font-weight: 600;
+        font-size: 15px;
+        color:  #3b4368;
+      }
+    }
+  }
+}
+.h2{
+  color: #000000;
+  //text-align: center;
+  width: 100%;
+  background-color: #2982a3;
+}
+.content{
+  width: 100%;
+  border: 5px solid #4f7de9;
+  border-radius:5px;
+  margin: 30px auto 50px;
+  padding: 20px 50px;
 }
