--- a/src/containers/SocietyManage/SocietyList/SocietyList.scss
+++ b/src/containers/SocietyManage/SocietyList/SocietyList.scss
@@ -1,6 +1,6 @@
 .society-list{
   width: 100%;
   margin: 100px auto;
-  background: #fff;
+  background: #fff !important;
   border: #ccc 1px solid;
 }
