--- a/src/containers/Overview/Overview.scss
+++ b/src/containers/Overview/Overview.scss
@@ -7,15 +7,16 @@
     width: 62%;
     height: 400px;
     background-color: #5e6fa3;
+    overflow: hidden;
     &__img {
       width: 100%;
-      height: 400px;
+      // height: 400px;
       border-radius: 5px;
       overflow: hidden;
       &>img {
         display: block;
         width:100%;
-        height: 100%;
+        // height: 100%;
       }
     }
   }
