--- a/src/containers/ActDetial/ActDetial.scss
+++ b/src/containers/ActDetial/ActDetial.scss
@@ -26,11 +26,19 @@
       height: 100%;
       border-radius: 5px;
       overflow: hidden;
-      &>img{
-        display: inline-block;
+      .ant-carousel{
+        width: 100%;
+        height: 100%;
+        & div{
+          height: 100%;
+        }
+      }
+      &__img{
+        display: block;
         height:100%;
         width: 100%;
       }
+      
     }
     &__desc{
       width: 38%;
