--- a/src/containers/Overview/Overview.scss
+++ b/src/containers/Overview/Overview.scss
@@ -8,11 +8,12 @@
     display: flex;
     justify-content: space-between;
     &__carousel {
-      width: 66%;
-      min-width: 700px;
+      width: 61.8%;
+      // min-width: 500px;
       height: 350px;
       // background-color: #5e6fa3;
       overflow: hidden;
+      margin-right: 10px;
       .ant-carousel{
         width: 100%;
         height: 100%;
@@ -34,8 +35,8 @@
       }
     }
     &__list{
-      width: 33%;
-      min-width: 400px;
+      width: 35%;
+      // min-width: 400px;
       height: 350px;
       background-color: #fff;
       // border: 1px solid #eee;
