--- a/src/containers/Login/Login.scss
+++ b/src/containers/Login/Login.scss
@@ -1,27 +1,26 @@
-.login{
+.login {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url('http://pp0pcg0r3.bkt.clouddn.com/bd599f78-ec9b-40a8-b065-89424d1c7053.jpeg?imageMogr2/thumbnail/1920x1080/format/webp') center no-repeat;
+  background: url('http://pp0pcg0r3.bkt.clouddn.com/bd599f78-ec9b-40a8-b065-89424d1c7053.jpeg?imageMogr2/thumbnail/1920x1080') center no-repeat;
   background-size: cover;
-  // background: #eee;
-  &__form{
+  &__form {
     width: 500px;
     position: absolute;
     text-align: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    border:2px solid #fff;
+    transform: translate(-50%, -50%);
+    border: 2px solid #fff;
     border-radius: 10px;
-    background: rgba(255,255,255,.3);
+    background: rgba(255, 255, 255, 0.3);
     padding: 50px;
     box-sizing: border-box;
-    &__logo{
+    &__logo {
       font-size: 22px;
-      margin-bottom:20px; 
+      margin-bottom: 20px;
     }
-    &__button{
+    &__button {
       margin: 0;
     }
   }
