--- a/src/static/scss/common.scss
+++ b/src/static/scss/common.scss
@@ -13,15 +13,18 @@ body {
   height: 10px;
   display: block;
 }
+
 .modal_body--open {
   // overflow: hidden;
   position: fixed;
   width: 100%;
   // height: 100%;
 }
+
 .filter-blur-1px {
   filter: blur(1px);
 }
+
 // *[aria-disabled="true"] {
 //   background: #CCC;
 //   color: white;
@@ -33,30 +36,44 @@ body {
 // }
 
 // 定义 placeholder 颜色
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
   color: #ccc;
 }
-::-moz-placeholder { /* Firefox 19+ */
+
+::-moz-placeholder {
+  /* Firefox 19+ */
   color: #ccc;
 }
-:-ms-input-placeholder { /* IE 10+ */
+
+:-ms-input-placeholder {
+  /* IE 10+ */
   color: #ccc;
 }
-:-moz-placeholder { /* Firefox 18- */
+
+:-moz-placeholder {
+  /* Firefox 18- */
   color: #ccc;
 }
-::-webkit-scrollbar-track-piece { //滚动条凹槽的颜色，还可以设置边框属性
-  background-color:#f8f8f8;
-  }
-  ::-webkit-scrollbar {//滚动条的宽度
-  width:9px;
-  height:9px;
-  }
-  ::-webkit-scrollbar-thumb {//滚动条的设置
-  background-color:#dddddd;
-  background-clip:padding-box;
-  min-height:28px;
-  }
-  ::-webkit-scrollbar-thumb:hover {
-  background-color:#bbb;
-  }
+
+::-webkit-scrollbar-track-piece {
+  //滚动条凹槽的颜色，还可以设置边框属性
+  background-color: #f8f8f8;
+}
+
+::-webkit-scrollbar {
+  //滚动条的宽度
+  width: 9px;
+  height: 9px;
+}
+
+::-webkit-scrollbar-thumb {
+  //滚动条的设置
+  background-color: #dddddd;
+  background-clip: padding-box;
+  min-height: 28px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #bbb;
+}
